--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "tsc && vite build && gh-pages -d dist"
+    "deploy": "bun run build && wrangler pages deploy"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
@@ -19,7 +19,6 @@
     "daisyui": "^5.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.0",
-    "gh-pages": "^6.1.2",
     "vite": "^6.1.0"
   }
 }
